## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libglbconf.a

libglbconf_a_SOURCES = \
	conf.c \
	conf.h \
	conf_index.c \
	conf_index.h \
	conf_db_sync.c \
	conf_db_sync.h \
	conf_items.h \
	conf_items.c \
	conf_triggers.c \
	conf_triggers.h

libglbconf_a_CFLAGS = \
	-I$(top_srcdir)/src/libs/zbxalgo
     
