## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libglbstate.a

libglbstate_a_SOURCES = \
	state_load_dump.c \
	state_load_dump.h \
	state.c \
	state.h	\
	state_items.h \
	state_items.c \
	state_discovery.h \
	state_discovery.c \
	state_triggers.h \
	state_triggers.c \
	state_problems.c 

libglbstate_a_CFLAGS = \
	-I$(top_srcdir)/src/libs/zbxalgo
     
