## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libzbxalgo.a

libzbxalgo_a_SOURCES = \
	algodefs.h \
	algodefs.c \
	binaryheap.c \
	hashmap.c \
	hashset.c \
	int128.c \
	linked_list.c \
	prediction.c \
	queue.c \
	vector.c \
	ring_buffer.c \
	obj_index.c \
	elems_hash.c \
	event_queue.c \
	binpool.c \
	strpool.c

