## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libpreprocessor.a

libpreprocessor_a_SOURCES = \
	item_preproc.c \
	item_preproc.h \
	preproc_history.c \
	preproc_history.h \
	preproc_manager.c \
	preproc_manager.h \
	preproc_worker.c \
	preproc_worker.h \
	preprocessing.c \
	preprocessing.h \
	json_discovery.c \
	glb_preproc_worker.c \
	glb_preproc_ipc.c

libpreprocessor_a_CFLAGS = \
	 $(LIBXML2_CFLAGS)
