## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libpreprocessor.a

libpreprocessor_a_SOURCES = \
	glb_preproc_worker.c \
	glb_preproc_ipc.c \
	item_preproc.c \
	item_preproc.h \
	preproc_history.c \
	preproc_history.h \
	preproc_manager.c \
	preproc_manager.h \
	preproc_worker.c \
	preproc_worker.h \
	preprocessing.c \
	preprocessing.h \
	preproc_cache.c \
	json_discovery.c 

 

libpreprocessor_a_CFLAGS = \
	 $(LIBXML2_CFLAGS)
