## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libglbtests.a

libglbtests_a_SOURCES = \
	../../libs/glb_state/tests/state_test_problems.c \
	../../libs/glb_state/tests/glb_state_tests.c \
	../../libs/zbxalgo/tests/algo_tests.c \
	../../libs/zbxalgo/tests/index_int64_test.c \
	../../libs/glb_macro/tests/glb_macro_tests.c \
	../../libs/glb_conf/tags/tests/tag_tests.c \
	../../libs/glb_conf/api_io/tests/api_io_tests.c \
	../../libs/glb_conf/tests/conf_tests.c \
	server_tests.c
    
