## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libservertests.a

libservertests_a_SOURCES = \
	server_tests.c \
	test_utils.c \
	../glb_poller/tests/test_internal.c \
	../preprocessor/tests/preproc_tests.c \
	../../libs/glb_state/tests/glb_state_tests.c \
	../../libs/glb_state/tests/glb_state_hosts_tests.c \
	../../libs/zbxipcservice/tests/glb_ipc2_serial_tests.c
